	
	* Release 2.4
	* Fixed:
		- Fixed redirected output on older OSes mangling newline
		- Fixed not having enough rights to query process token even with debug privileges
	* Changed:
		- Better wording in results output
		- Improved performance - faster searches and kills
		- Now globbing is not path-aware by default for /pth and /mod (use 'strict' parameter for path-aware globbing)
	* Added:
		- /usr switch (kill by user name)
		- /wnd switch (kill by window title)
		- /mem switch (kill by memory usage)
		- /aim switch (kill targeted process)
		- +p setting (exclude parent process)
		- +f setting (fast mode)
		- 'strict' parameter for /fsc switch
		- 'reset' parameter for /lst switch
		- 'strict' parameter for /pth and /mod switches
	* Removed:
		- 'sub' parameter for /cmd switch (temporary - will be returned in future versions)
		- 'parent' parameter for /pid switch (use +p setting instead)
		- 'anywnd' parameter for /fgd switch (use blacklist/whitelist instead)

2017-06-04  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.3
	* Fixed:
		- Removed odd debug output in /cmd
		- Fixed crash on exit when /cmd:sub is used
	* Changed:
		- Windowless verbose output (message box) is now topmost and has input focus
	* Added:
		- +c/-c setting (close process)
		- +e/-e setting (expand environment variables)
		- /end switch (unconditionally return positive result)
		- /psh switch (push argument to argumet stack)
		- /pop switch (pop argument from argument stack)
		- 'parent' parameter for /pid switch

2017-01-17  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.2
	* Fixed:
		- Fixed duplicated "NOT found" message with /inr switch
		- Fixed possible crash when using /mod, /gld, /d3d and /ogl switches

2016-10-22  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.1
	* Changed:
		- Redesigned /inr and /fgd switches
		- Added short delay after /bpp
		- Revamped output
		- Arguments starting with '#' or '\0' are now ignored
		- Path comparing now omits backslash from globbing