@@ -11,6 +11,7 @@ namespace FPRoutines {
 	std::wstring GetFilePath(HANDLE PID, HANDLE hProcess, bool vm_read);
 	std::vector<std::wstring> GetModuleList(HANDLE hProcess, bool full);
 	std::wstring GetHandlePath(HANDLE hFile, bool full);
+	std::wstring GetCommandLine(HANDLE hProcess);
 }
 
 #endif //FPROUTINES_H
